<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~ Copyright (c) 2021-2024, Adel Noureddine, Université de Pau et des Pays de l'Adour.
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the
  ~ GNU General Public License v3.0 only (GPL-3.0-only)
  ~ which accompanies this distribution, and is available at
  ~ https://www.gnu.org/licenses/gpl-3.0.en.html
  ~
  ~ Author : Adel Noureddine
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.noureddine</groupId>
    <artifactId>joularjx</artifactId>
    <version>3.1.0</version>

    <packaging>jar</packaging>
    <name>${project.artifactId}</name>

    <description>JoularJX is a Java agent for software energy monitoring at the source code level</description>
    <inceptionYear>2021</inceptionYear>

    <url>https://github.com/joular/joularjx</url>

    <licenses>
        <license>
            <name>The GNU General Public License v3.0 only (GPL-3.0-only)</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
        </license>
    </licenses>

    <developers>
        <developer>
          <name>Adel Noureddine</name>
          <email>adel.noureddine@outlook.com</email>
        </developer>
    </developers>

    <scm>
      <connection>scm:git:git://github.com/joular/joularjx.git</connection>
      <developerConnection>scm:git:ssh://github.com:joular/joularjx.git</developerConnection>
      <url>http://github.com/joular/joularjx/tree/develop</url>
    </scm>

    <properties>
        <maven.compiler.release>11</maven.compiler.release>
        <encoding>UTF-8</encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <auto-service.version>1.1.1</auto-service.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.14.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-api</artifactId>
          <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.ginsberg</groupId>
            <artifactId>junit5-system-exit</artifactId>
            <version>1.1.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.marschall</groupId>
            <artifactId>memoryfilesystem</artifactId>
            <version>2.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.auto.service</groupId>
            <artifactId>auto-service-annotations</artifactId>
            <version>${auto-service.version}</version>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.14.0</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <debug>true</debug>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.google.auto.service</groupId>
                            <artifactId>auto-service</artifactId>
                            <version>${auto-service.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>org.noureddine.joularjx.Agent</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Agent-Class>org.noureddine.joularjx.Agent</Agent-Class>
                            <Premain-Class>org.noureddine.joularjx.Agent</Premain-Class>
                            <Can-Redefine-Classes>true</Can-Redefine-Classes>
                            <Can-Retransform-Classes>true</Can-Retransform-Classes>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.12.0</version>
                <executions>
                    <execution>
                        <id>generate-javadoc</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <configuration>
                            <target>
                                <!-- md5 and sha1 are mandatory, despite being deprecated algorithms -->
                                <checksum fileext=".md5">
                                    <fileset dir="target">
                                    <include name="*.jar"/>
                                </fileset>
                                </checksum>
                                <checksum algorithm="SHA-1" fileext=".sha1">
                                    <fileset dir="target">
                                    <include name="*.jar"/>
                                </fileset>
                                </checksum>
                                <!-- Add sha512 which is still safe -->
                                <checksum algorithm="SHA-512" fileext=".sha512">
                                    <fileset dir="target">
                                    <include name="*.jar"/>
                                </fileset>
                                </checksum>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
